--- a/search.css
+++ b/search.css
@@ -13,26 +13,26 @@
     padding: 12px 20px;
     border: 1px solid #000;
     border-radius: 30px 30px 30px 30px;
-    background-color: rgb(107, 104, 104);
-    color: white;
+    background-color: rgb(58, 58, 58);
+    color: rgb(255, 255, 255);
 }
 
 #search-button {
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-left: 10px;
-    height: 50px;
-    border-radius: 30px 30px 30px 30px;
-    color: black;
-    border: 2px solid #000000;
-    font-family: Arial, sans-serif;
+    background-color: rgb(51, 47, 47);
+    color: white;
+    border: 1px solid #000;
+    padding: 12px 20px;
+    border-radius: 5px 5px 5px 5px;
+    font-size: 16px;
     cursor: pointer;
+    
 }
 
 #links > div > a {
     color: white;
     text-decoration: none;
 }
+
 
 #header {
     color: white;
@@ -50,9 +50,88 @@
     border-radius: 5px 5px 5px 5px;
     font-size: 16px;
     cursor: pointer;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 20px;
 }
 
+#subheader {
+    color: rgba(0, 0, 255, 0.795);
+    font-size: 15px;
+    text-align: center;
+    margin-top: -60px; /* adjust as needed to bring closer to header */
+}
+
+.search-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px; 
+    margin-top: 40px;
+}
+
+.advanced_link {
+    display: column;
+    margin-right: 15px;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.advanced_link:hover {
+    text-decoration: underline;
+}
+
+#subheader_advanced {
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    color: #f28b82; 
+}
+
+.container form {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    gap: 10px 20px;
+    max-width: 800px;
+}
+
+label {
+    font-size: 14px;
+    align-self: center;
+    color: rgb(145, 144, 144);
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 6px;
+    border: 1px solid #5f6368;
+    border-radius: 2px;
+    background-color: #202124;
+    color: #e8eaed;
+}
+
+input[type="text"]:focus {
+    border-color: #8ab4f8;
+    outline: none;
+}
+
+button {
+    grid-column: 2; 
+    justify-self: start;
+    padding: 6px 12px;
+    background-color: #3162b3;
+    color: #fcfcfc;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+button:hover {
+    background-color: #aecbfa;
+}
+
+#header_advanced {
+    grid-column: 1 / -1;
+    font-weight: normal;
+    margin-bottom: 10px;
+    color: #ffffff;
+}
